# vostools

./: .coverage  .coveragerc  .gitignore  .gitmodules  .intTest  .publish.sh  .travis.yml  FAQ.txt  MANIFEST  PKG-INFO  README  README.md  README.rst  RELEASE_NOTES.txt  build.xml  cantop  conftest.py  distribute_setup.py  getCert  getCert.py  git_instructions.txt  gms.py  index.html  mountvofs  params.json  requirements.txt  runtest  setup.cfg  setup.py  tag.py  test_vos.py  travis_inttest_proxy1  travis_inttest_proxy2  vcat  vchmod  vcp  vlock  vls  vmkdir  vmv  (+5 more)
.devcontainer/: devcontainer.json
CadcCache/: CadcCache.py  CadcCache2.py  SharedLock.py  __init__.py
cadcCache/: CadcCache.py
docs/: index.html
etc/: header.java  header.ml  header.open.java  header.open.ml  header.open.shell  header.script  header.sql  opencadc.properties  opencadc.targets.xml
projects/: .project
scripts/: MANIFEST  PKG-INFO  cantop  checkJobPhase  getCert  monitor_canfar_queue  mountvofs  setup.py  vcat  vchmod  vcp  vln  vlock  vls  vmkdir  vmv  vos  (+6 more)
vofs/: MANIFEST.in  README.md  README.rst  dev_requirements.txt  setup.cfg  setup.py  tox.ini  vos.py
vofs/test/scripts/: vospace-mountvospace-atest.tcsh
vofs/vofs/: CacheMetaData.py  CadcCache.py  SharedLock.py  __init__.py  mountvofs.py  utils.py  vofs.py
vofs/vofs/tests/: test_cache_metadata.py  test_cadc_cache.py  test_node_cache.py  test_vofs.py
vos/: BitVector.py  CacheMetaData.py  CadcCache.py  MANIFEST.in  README.md  README.rst  SharedLock.py  __init__.py  __version__.py  cantop.py  commonparser.py  dev_requirements.txt  fuse.py  logExceptions.py  md5_cache.py  new-commands-README.md  runtest  setup.cfg  setup.py  tox.ini  utils.py  vofs.py  vos.py
vos/docker/: README.rst
vos/docker/2.7/: Dockerfile
vos/docker/3.6/: Dockerfile
vos/docker/3.7/: Dockerfile
vos/docker/3.8/: Dockerfile
vos/intTest/: test_basic_cmds.py
vos/perftest/: Dockerfile  README.md  locustfile.py  test_config  testers.py
vos/perftest/global/: Dockerfile  docker-compose.yml  entrypoint.sh  locustfile.py  testers.py
vos/perftest/global/config/: test_config
vos/perftest/site/: Dockerfile  docker-compose.yml  entrypoint.sh  locustfile.py  testers.py
vos/perftest/site/config/: test_config
vos/scripts/: cantop  checkJobPhase  getCert  vmv  voSpaceSync.py  vrm
vos/test/: TestAll.py  TestCacheMetaData.py  TestCadcCache.py  TestNodeCache.py  Test_md5_cache.py  Test_vofile.py  Test_vofs.py  Test_vos.py
vos/test/intTest/: __init__.py  test_integration.py
vos/test/performance/: vofsRandomAccessSeeks.py  vofsRandomAccessTest
vos/test/scripts/: README  setup_test_lockerrors_int.sh  test_lockerrors_int.py  vospace-all.tcsh  vospace-client-atest.tcsh  vospace-delete-permission-atest.tcsh  vospace-getcert.tcsh  vospace-link-atest.tcsh  vospace-lock-atest.tcsh  vospace-move-atest.tcsh  vospace-node-properties.tcsh  vospace-quota-atest.tcsh  vospace-read-permission-atest.tcsh  vospace-storage-inventory-client-atest.tcsh  vospace-token-atest.tcsh  vospace-vsync-atest.tcsh
vos/test/scripts_local/: README  vospace-all.tcsh  vospace-client-atest.tcsh  vospace-cutouts.tcsh  vospace-delete-permission-atest.tcsh  vospace-link-atest.tcsh  vospace-lock-atest.tcsh  vospace-move-atest.tcsh  vospace-node-properties.tcsh  vospace-quota-atest.tcsh  vospace-read-permission-atest.tcsh  vospace-vsync-atest.tcsh
vos/test/scripts_old/: test_lockerrors_int.py  vospace-all.tcsh  vospace-client-atest.tcsh  vospace-delete-permission-atest.tcsh  vospace-link-atest.tcsh  vospace-lock-atest.tcsh  vospace-move-atest.tcsh  vospace-node-properties.tcsh
vos/test/scripts_prod/: README  vospace-all.tcsh  vospace-client-atest.tcsh  vospace-cutouts.tcsh  vospace-delete-permission-atest.tcsh  vospace-link-atest.tcsh  vospace-lock-atest.tcsh  vospace-move-atest.tcsh  vospace-node-properties.tcsh  vospace-quota-atest.tcsh  vospace-read-permission-atest.tcsh  vospace-vsync-atest.tcsh
vos/test/test_vos/: test_client.py  test_integration.py
vos/vos/: NodeCache.py  __init__.py  _astropy_init.py  commonparser.py  config.py  conftest.py  logExceptions.py  md5_cache.py  node_cache.py  setup_package.py  storage_inventory.py  vofs.py  vos.py  vosconfig.py
vos/vos/commands/: README.md  __init__.py  interrupt_exception.py  vcat.py  vchmod.py  vcp.py  vln.py  vlock.py  vls.py  vmkdir.py  vmv.py  vrm.py  vrmdir.py  vsync.py  vtag.py
vos/vos/commands/tests/: test_cli.py  test_vls.py  test_vrm.py  test_vsync.py
vos/vos/commands/tests/data/: help_vcat.txt  help_vchmod.txt  help_vcp.txt  help_vln.txt  help_vlock.txt  help_vls.txt  help_vmkdir.txt  help_vmv.txt  help_vrm.txt  help_vrmdir.txt  help_vsync.txt  help_vtag.txt  vcat.txt  vchmod.txt  vcp.txt  vln.txt  vlock.txt  vls.txt  vmkdir.txt  vmv.txt  vrm.txt  vrmdir.txt  vsync.txt  vtag.txt
vos/vos/data/: default-vos-config
vos/vos/test/: Test_commonparser.py  Test_vos.py
vos/vos/tests/: __init__.py  test_commonparser.py  test_config.py  test_md5_cache.py  test_node_cache.py  test_storage_inventory.py  test_vofile.py  test_vofs.py  test_vos.py
vos/vos/tests/data/: default-vos-config
(+1656 files in other folders)
