[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
intTest = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = vos

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = vos
description = CADC VOS Class Libraries
author = JJ Kavelaars, Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = https://www.canfar.net/en/docs/storage
edit_on_github = False
github_project = opencadc/vostools
install_requires = html2text>=2016.5.29 cadcutils>=1.1.20 future enum34
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 3.1.0


[entry_points]
vcat = vos.commands.vcat:vcat
vchmod = vos.commands.vchmod:vchmod
vcp = vos.commands.vcp:vcp
vln = vos.commands.vln:vln
vlock = vos.commands.vlock:vlock
vls = vos.commands.vls:vls
vmkdir = vos.commands.vmkdir:vmkdir
vmv = vos.commands.vmv:vmv
vrm = vos.commands.vrm:vrm
vrmdir = vos.commands.vrmdir:vrmdir
vsync = vos.commands.vsync:vsync
vtag = vos.commands.vtag:vtag

